--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <p class="mb-5">我目前是一名web开发者，运维人员和开源社区学生，并且正在继续完善我的职业技能，我对网络安全的前景十分看好，并朝着这个方向学习。</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
-              <a href="https://github.com/JacintoDesign">
+              <a href="https://github.com/frozenfisher">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -83,7 +83,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://codepen.io/jacintodesign/">
+              <a href="https://codepen.io">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-codepen fa-stack-1x fa-inverse"></i>
@@ -91,7 +91,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://www.linkedin.com/in/jacintowong/">
+              <a href="https://www.linkedin.com">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -99,7 +99,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://www.instagram.com/mynameisjacinto/">
+              <a href="https://www.instagram.com/">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
