--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">社会大学</h3>
               <div class="subheading mb-3">2020.6.22  - 至今</div>
-              <div>我是05年出生的，今年（2024）十九了。我所有的技术和知识都是靠自己自学的。我没有什么学历，我和别人相比竞争力差这点我也知道，人生走错一步，后悔了也没用，我只能往前走。我爱技术/开源，如果需要英语那么我就去学，如果需要算法，我就去刷题，如果需要高等数学，我就去从头自学。学历不是我自甘堕落的理由，也不是我变优秀的阻碍，我相信努力终有回报。即使一手烂牌也能把他用最好的方式打出，现在我将堵上我的一切：青春，精力，时间去做好这一件事</div>
+              <div>我是05年出生的，今年（2024）十九了。我所有的技术和知识都是靠自己自学的</div>
               <!-- <p>GPA: 8.1/9</p> -->
             </div>
             
